
CHANGELOG

* 2014/08/27:

    - Avoid reloading post/pages when freezing.

    - DEBUG is now always True by default when freezing
      because it's as fast as disabling it.

* 2014/08/26:

    - Prefix program name on output to stderr.
      e.g. 'blog.py: error: message...'

    - The route for tags is now '/archive/<tag>'.
      Both url_tag() and 'tag.html' as a template have been removed.
      Use 'url_archive()' and 'url_archive(tag)' instead.

* 2014/07/21:

    - Revised. Working on Python 3.4.1, Flask 0.10.1, Frozen-Flask 0.11
      Markdown 2.4.1, Pygments 1.6, PyYAML 3.11.
      No changes needed.

* 2014/02/05:

    - Tested on IE6-IE11, Chrome, Firefox, Opera, Safari and multiple
      tablets and mobile phones.

    - Use line-height instead of vertical-align for the top bar.

* 2014/02/04:

    - Added pagination support as a template filter.

    - Non-explicit templates (includes, macros) start with a dash.

* 2014/02/03:

    - Added tags support.
